logs/captricity-python-client.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/captools'...
Listing './lib/python3.5/site-packages/captools/api'...
Compiling './lib/python3.5/site-packages/captools/api/authentication.py'...
***   File "./lib/python3.5/site-packages/captools/api/authentication.py", line 72
    print 'Your API token is:', API_TOKEN
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/captools/api/client.py'...
***   File "./lib/python3.5/site-packages/captools/api/client.py", line 99
    print resource_desc[0]
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/captools/api/img'...
Compiling './lib/python3.5/site-packages/captools/api/list-jobs-example.py'...
***   File "./lib/python3.5/site-packages/captools/api/list-jobs-example.py", line 22
    print job['name']
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/captools/api/multipage-upload-example.py'...
***   File "./lib/python3.5/site-packages/captools/api/multipage-upload-example.py", line 32
    print 'Created InstanceSet %s in Job %s' % (iset_id, TARGET_JOB_ID)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/captools/api/upload-instances-example.py'...
***   File "./lib/python3.5/site-packages/captools/api/upload-instances-example.py", line 34
    print 'Uploading images to job "%s"' % job['name']
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/captricity_python_client-0.21.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
